--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="estilo.css"> 
+	<link rel="stylesheet" type="text/css" href="css/estilo.css"> 
 </head>
 <body class="cuerpo">
 	<h1>Lorem Ipsum</h1>
